Fixed width on mobile

--- a/style.scss
+++ b/style.scss
@@ -19,6 +19,7 @@ body {
     font-family: 'Inter', sans-serif;
     padding: 0;
     margin: 0;
+    max-width: 100vw;
 
     background-size: 100px 100px;
     background-image:
@@ -83,15 +84,20 @@ body {
     .section {
         min-height: 100vh;
         height: fit-content;
-        width: 100vw;
+        width: fit-content;
         //padding-top: 75px;
-        padding-left: 200px;
+        padding-left: 100px;
         padding-bottom: 50px;
 
         @media only screen and (max-width: $mobileThreshold) {
             padding-top: 50px;
-            padding-left: 50px;   
-        }    
+            padding-left: 25px;   
+        }
+        
+        @media only screen and (max-width: $tabletThreshold) {
+            padding-top: 50px;
+            padding-left: 35px;   
+        }
 
         .title {
             font-size: 6em;
